Fix dark mode images

--- a/style.css
+++ b/style.css
@@ -377,17 +377,29 @@
     background-color: rgb(59, 58, 58);
 }
 
+.dark-icon.dark-mode {
+    fill: white;
+    background-color: black;
+    position: absolute;
+    top: 6%;
+    left: 76.5%;
+    transform: translate(-50%, -50%);
+}
+
 .header-icon.dark-mode,
 #alert-btn.dark-mode,
 .search-bar.dark-mode,
 .header-button.dark-mode,
-.avatar.dark-mode,
-.dark-icon.dark-mode {
+.avatar.dark-mode {
     display: none;
 }
 
 .dark-mode #profile-pic-dark {
     display: block;
+    background-color: black;
+    position: absolute;
+    top: 10%;
+    left: 24%;
 }
 
 .dark-mode #profile-pic-light {
